# GPTR_UWB

./: .gitignore  LICENSE  README.md
cartiber/: CMakeLists.txt  README.md  package.xml
cartiber/include/: GaussianProcess.hpp  utility.h
cartiber/include/basalt/utils/: sophus_utils.hpp
cartiber/include/factor/: ExtrinsicPoseFactor.h  GPExtrinsicFactor.h  GPExtrinsicFactorAutodiff.h  GPMotionPriorFactor.h  GPMotionPriorFactorAutodiff.h  GPMotionPriorTwoKnotsFactor.h  GPMotionPriorTwoKnotsFactorAutodiff.h  GPMotionPriorTwoKnotsFactorTMN.hpp  GPPointToPlaneFactor.h  GPPointToPlaneFactorAutodiff.h  GPPointToPlaneFactorTMN.hpp  GPPoseFactor.h  GPPoseFactorAutodiff.h  GPSmoothnessFactor.h  GaussianPriorFactor.h  GyroAcceBiasAnalyticFactor.h  GyroAcceBiasFactor.h  PointToPlaneAnalyticFactor.hpp  PointToPlaneAnalyticFactorTest.hpp  PointToPlaneDisFactorCT.h  PointToPlaneFactor.h  PointToPlaneGPFactor.hpp  PoseAnalyticFactor.h  PoseGPFactor.h  VelocityFactor.h  _GPMotionPriorFactor.h  _GPMotionPriorFactorAutodiff.h  _GaussianPriorFactor.h  _PointToPlaneDisFactor.h  _PoseFactor.h  _PoseFactorCT.h
cartiber/launch/: cartiber.rviz  run.launch  run_mcdviral.launch  run_sim.launch  run_util.launch
cartiber/src/: CloudMatcher.hpp  EKFLO.hpp  GNSolver.cpp  GNSolver.h  GPKFLO.hpp  GPLO.hpp  GPMAPLO.hpp  GPMLC.cpp  GPMLC.h  GPUI.cpp  SGPLO.hpp  cartiber.cpp  test.cpp
ctgraupro/: CMakeLists.txt  package.xml
ctgraupro/dataVICalib/: corners2D_cam1.csv  corners3D.csv
ctgraupro/include/: GaussianProcess.hpp  PoseLocalParameterization.h  camera.hpp  utility.h
ctgraupro/include/factor/: GPIMUFactor.h  GPIMUFactorAutodiff.h  GPLTFactor.h  GPMotionPriorTwoKnotsFactor.h  GPMotionPriorTwoKnotsFactorAutodiff.h  GPMotionPriorTwoKnotsFactorTMN.hpp  GPMotionPriorTwoKnotsFactorUI.h  GPPointToPlaneFactor.h  GPPointToPlaneFactorTMN.hpp  GPProjectionFactor.h  GPTDOAFactor.h  GPTDOAFactorAutodiff.h  _GPMotionPriorFactor.h  _GPPoseFactor.h  _PointToPlaneAnalyticFactor.hpp  _PoseAnalyticFactor.h  _PreintFactor.h  _RelOdomFactor.h
ctgraupro/launch/: ctgaupro_lio.rviz  ctgaupro_lio_mcdviral.rviz  ctgaupro_lio_sim.rviz  ctgaupro_ui.rviz  ctgaupro_vicalib.rviz  run_lio_mcdviral.launch  run_lio_sim.launch  run_mcdviral.launch  run_sim.launch  run_testui.launch  run_util.launch  run_util_linktrack.launch  run_vicalib.launch
ctgraupro/scripts/: analysis_mcdviral.ipynb  analysis_sim.ipynb  cartinbot_viz.py  run_all.sh
ctgraupro/src/: CloudMatcher.hpp  GPKFLO.hpp  GPMAPLO.hpp  GPMLC.cpp  GPMLC.h  GPMUI.hpp  GPMUI_LT.hpp  GPMVICalib.hpp  GPUI.cpp  GPUI_LT.cpp  GPVICalib.cpp  ctgaupro.cpp  ctgaupro_lio.cpp  test.cpp  testLIO.cpp  testUI.cpp  test_ljp.cpp
gptr/: .gitignore  CMakeLists.txt  package.xml
gptr/dataVICalib/: corners2D_cam0.csv
gptr/include/: CloudMatcher.hpp  DoubleSphereCameraModel.hpp  GNSolver.cpp  GNSolver.h  GaussNewtonUtilities.hpp  GaussianProcess.hpp  LOAM.hpp  i2EKFLO.hpp  utility.h
gptr/include/factor/: ExtrinsicFactor.h  FullExtrinsicFactor.h  GPExtrinsicFactor.h  GPExtrinsicFactorAutodiff.h  GPIMUFactorAutodiff.h  GPLTFactorAutodiff.h  GPMotionPriorTwoKnotsFactorTMN.hpp  GPPointToPlaneFactor.h  GPPointToPlaneFactorAutodiff.h  GPProjectionFactor.h  GPTDOAFactor.h  GPTDOAFactorAutodiff.h  _GPPoseFactorAutodiff.h  _PoseFactorAnalytic.h
gptr/launch/: gptr_lio_mcdviral.rviz  gptr_lio_sim.rviz  gptr_lo_cathhs.rviz  gptr_lo_sim.rviz  gptr_ui.rviz  gptr_vicalib.rviz  run_lio_cathhs.launch  run_lio_cathhs_iot.launch  run_lio_cathhs_iot_lidar0.launch  run_lio_cathhs_iot_lidar1.launch  run_lio_mcdviral.launch  run_lio_mcdviral_fast.launch  run_lio_sim.launch  run_lio_sim_lidar0.launch  run_lio_sim_lidar1.launch  run_testui.launch  run_util.launch  run_util_linktrack.launch  run_vicalib.launch
gptr/scripts/: analysis_cathhs.ipynb  analysis_mcdviral.ipynb  analysis_sim.ipynb  cartinbot_viz.py  run_all.sh
gptr/src/: CloudMatcher.hpp  GPKFLO.hpp  GPLIO.cpp  GPLIO.hpp  GPLO.cpp  GPLO.hpp  GPMAPLO.hpp  GPMLC.cpp  GPMLC.h  GPMUI_LT.hpp  GPMVICalib.hpp  GPUI.cpp  GPUI.hpp  GPVICalib.cpp  gptr_lio.cpp  testLIO.cpp  testUI.cpp
scripts/: analysis_cathhs.ipynb  analysis_mcdviral.ipynb  analysis_sim.ipynb  cartiber.rviz  export_cathhs_pointclouds.ipynb  export_mcd_pointclouds.ipynb  generate_synthetic_data.ipynb  generatetraj.ipynb  generatetraj_dynamic_extrinsic.ipynb  util_anchor.ipynb
scripts/myparproc/: ParProc.py  ProgressCheck.py  __init__.py
scripts/myutil/: myutil.py
